force-app/main/default/objects/QB_Invoice__c/QB_Invoice__c.object-meta.xml
<CustomObject>
    <label>QB Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>