force-app/main/default/objects/QB_Invoice__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>Account__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency</label>
    <type>Text</type>
</CustomField>