force-app/main/default/objects/QB_Invoice__c/fields/Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credited__c</fullName>
    <description>Amount Credited will be calculated only if any Credit Memo applied to Invoice</description>
    <label>Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>