force-app/main/default/objects/QB_Invoice__c/fields/Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Amount_Overdue__c</fullName>
    <formula>IF( Due_Date__c &lt; TODAY(), Amount_Due__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>