force-app/main/default/objects/QB_Invoice__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>City of the Billing Address</description>
    <label>Billing City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>