force-app/main/default/objects/QB_Invoice__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>Country of Billing Address</description>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>