force-app/main/default/objects/QB_Invoice__c/fields/Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location__c</fullName>
    <label>Billing Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>