force-app/main/default/objects/QB_Invoice__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>Billing Postal / Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>