force-app/main/default/objects/QB_Invoice__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>State of the Billing Address</description>
    <label>Billing State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>