force-app/main/default/objects/QB_Invoice__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Classes provide a way to track different segments of the business, this can be enabled in QuickBooks</description>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>