force-app/main/default/objects/QB_Invoice__c/fields/Created_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_in_QBO_Date__c</fullName>
    <label>Created in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>