force-app/main/default/objects/QB_Invoice__c/fields/Created_via__c.field-meta.xml
<CustomField>
    <fullName>Created_via__c</fullName>
    <label>Created via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>