force-app/main/default/objects/QB_Invoice__c/fields/Credit_Memo_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Total_Amount__c</fullName>
    <label>Total Credit / Refund Amoun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>