force-app/main/default/objects/QB_Invoice__c/fields/Credit_Memo_Unallocated_Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Unallocated_Credit__c</fullName>
    <label>Credit Memo - Unallocated Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>