force-app/main/default/objects/QB_Invoice__c/fields/Custom_Field_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_2_Value__c</fullName>
    <label>Custom Field 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>