force-app/main/default/objects/QB_Invoice__c/fields/Custom_Field_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_3_Name__c</fullName>
    <label>Custom Field 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>