force-app/main/default/objects/QB_Invoice__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <label>Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>