force-app/main/default/objects/QB_Invoice__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <formula>IF(OR(Amount_Overdue__c == 0.00,ISBLANK(Amount_Overdue__c)) , null, TODAY() - Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>