force-app/main/default/objects/QB_Invoice__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The e-mail address where the invoice is sent</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>