force-app/main/default/objects/QB_Invoice__c/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <description>Email status of the invoice.
Values: NotSet, NeedToSend, EmailSent</description>
    <label>Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>