force-app/main/default/objects/QB_Invoice__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Applicable if multi-currency is enabled for the QuickBooks company.
Default is 1, the number of home currency units it takes to equal one unit of currency specified by Currency code</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>