force-app/main/default/objects/QB_Invoice__c/fields/Global_Tax_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Global_Tax_Calculation__c</fullName>
    <description>Method in which tax is applied. Allowed values are: TaxExcluded, TaxInclusive, and NotApplicable</description>
    <label>Global Tax Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>