force-app/main/default/objects/QB_Invoice__c/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <formula>Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>