force-app/main/default/objects/QB_Invoice__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <description>This field is to hold the Status of Invoice when the Invoice is either Voided or Deleted</description>
    <label>Internal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>