force-app/main/default/objects/QB_Invoice__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>