force-app/main/default/objects/QB_Invoice__c/fields/Last_Modified_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_in_QBO_Date__c</fullName>
    <label>Last Modified in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>