force-app/main/default/objects/QB_Invoice__c/fields/Location_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Field_Name__c</fullName>
    <label>Location Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>