force-app/main/default/objects/QB_Invoice__c/fields/Location_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Location_Field_Value__c</fullName>
    <label>Location Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>