force-app/main/default/objects/QB_Invoice__c/fields/Loss_Pmt_to_LR_43_44__c.field-meta.xml
<CustomField>
    <fullName>Loss_Pmt_to_LR_43_44__c</fullName>
    <formula>Amount_Received__c *(10/9)*(0.4333)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Pmt to LR (43.44%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>