force-app/main/default/objects/QB_Invoice__c/fields/Message_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Message_Displayed__c</fullName>
    <label>Message Displayed on Invoice</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>