force-app/main/default/objects/QB_Invoice__c/fields/Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Number__c</fullName>
    <description>Reference Number of related payment, when there are multiple references it shows &apos;Multiple Payments&apos;.</description>
    <label>Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>