force-app/main/default/objects/QB_Invoice__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>