force-app/main/default/objects/QB_Invoice__c/fields/Process_Note__c.field-meta.xml
<CustomField>
    <fullName>Process_Note__c</fullName>
    <label>Process Note</label>
    <length>35</length>
    <type>Text</type>
</CustomField>