force-app/main/default/objects/QB_Invoice__c/fields/Public_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Invoice_Link__c</fullName>
    <label>Public Invoice Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>