force-app/main/default/objects/QB_Invoice__c/fields/QB_Company__c.field-meta.xml
<CustomField>
    <fullName>QB_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB Company</label>
    <referenceTo>QB_Company__c</referenceTo>
    <relationshipLabel>QB Invoices</relationshipLabel>
    <relationshipName>QB_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>