force-app/main/default/objects/QB_Invoice__c/fields/QB_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_External_Id__c</fullName>
    <label>QB External Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>