force-app/main/default/objects/QB_Invoice__c/fields/QB_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>QB_Status_Flag__c</fullName>
    <formula>IF(
CONTAINS($User.UIThemeDisplayed, &apos;Theme4&apos;),

IF(
ISBLANK( Internal_Status__c ),
IF( OR(Status__c = &apos;Paid&apos;, Status__c = &apos;Closed&apos;),
IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/green-flag.png&quot;, &quot;Paid&quot;),
IF( Type__c = &apos;Credit Memo&apos;,
IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/yflag.png&quot;, &quot;Unapplied&quot;),
IF( Amount_Overdue__c &gt; 0,
IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/red-flag.png&quot;, &quot;Overdue&quot;) ,
IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/yflag.png&quot;, &quot;Open&quot; )
)
)
),
IF(OR(Internal_Status__c = &apos;Pending&apos;,Internal_Status__c = &apos;Open/Partial&apos;), IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/yflag.png&quot;,&quot;Open&quot;),
IF(OR(Internal_Status__c = &apos;Invoiced In Full&apos;,Internal_Status__c = &apos;Closed&apos;),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/green-flag.png&quot;, &quot;Paid&quot;),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/X.png&quot;, &quot;X&quot;)))
),

IF(
ISBLANK( Internal_Status__c ),
IF( OR(Status__c = &apos;Paid&apos;, Status__c = &apos;Closed&apos;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Paid&quot;, 16, 16),
IF( Type__c = &apos;Credit Memo&apos;,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Unapplied&quot;, 16, 16),
IF( Amount_Overdue__c &gt; 0,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Overdue&quot;, 16, 16) ,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Open&quot;, 16, 16)
)
)
),
IF(OR(Internal_Status__c = &apos;Pending&apos;,Internal_Status__c = &apos;Open/Partial&apos;), IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/yflag.png&quot;, &quot;Open&quot; , 16, 16),
IF(OR(Internal_Status__c = &apos;Invoiced In Full&apos;,Internal_Status__c = &apos;Closed&apos;),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Paid&quot;, 16, 16),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/X.png&quot;, &quot;X&quot;, 16, 16)))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>