force-app/main/default/objects/QB_Invoice__c/fields/QB_to_CUG_12__c.field-meta.xml
<CustomField>
    <fullName>QB_to_CUG_12__c</fullName>
    <formula>Amount_Received__c *(12/100)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to CUG (12%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>