force-app/main/default/objects/QB_Invoice__c/fields/QB_to_Operating_28__c.field-meta.xml
<CustomField>
    <fullName>QB_to_Operating_28__c</fullName>
    <formula>Amount_Received__c *(10/9)*(28/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to Operating (28%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>