force-app/main/default/objects/QB_Invoice__c/fields/QB_to_Reserves_50__c.field-meta.xml
<CustomField>
    <fullName>QB_to_Reserves_50__c</fullName>
    <formula>Amount_Received__c *(1/2)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to Reserves(50%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>