force-app/main/default/objects/QB_Invoice__c/fields/QBO_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Org_ID__c</fullName>
    <label>QuickBooks Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>