force-app/main/default/objects/QB_Invoice__c/fields/QBO_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>QBO_Org_Name__c</fullName>
    <label>QuickBooks Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>