force-app/main/default/objects/QB_Invoice__c/fields/QuickBooks_Company__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuickBooks Company</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>QB Invoices</relationshipLabel>
    <relationshipName>QB_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>