force-app/main/default/objects/QB_Invoice__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>