force-app/main/default/objects/QB_Invoice__c/fields/See_this_Invoice_in_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>See_this_Invoice_in_QuickBooks__c</fullName>
    <formula>HYPERLINK(
&quot;https://&quot;&amp;IF( CONTAINS(QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp;
CASE(
Type__c,

&apos;Credit Memo&apos;, &quot;creditmemo?txnId=&quot;&amp;RIGHT( QB_External_Id__c ,(LEN(QB_External_Id__c )-FIND(&apos;-CM-&apos;, Invoice_Id__c) - 3 )),

&apos;Sales Receipt&apos;, &quot;salesreceipt?txnId=&quot;&amp;RIGHT(QB_External_Id__c ,(LEN(QB_External_Id__c )-FIND(&apos;-SR-&apos;, Invoice_Id__c)- 3)),

&apos;Refund Receipt&apos;, &quot;refundreceipt?txnId=&quot;&amp;RIGHT(QB_External_Id__c ,(LEN(QB_External_Id__c )-FIND(&apos;-RR-&apos;, Invoice_Id__c)- 3)),

&quot;invoice?txnId=&quot;&amp;(QB_External_Id__c)

),
&quot;Click Here&quot;
)</formula>
    <label>See this Invoice in QuickBooks</label>
    <type>Text</type>
</CustomField>