force-app/main/default/objects/QB_Invoice__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>