force-app/main/default/objects/QB_Invoice__c/fields/Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Location__c</fullName>
    <label>Shipping Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>