force-app/main/default/objects/QB_Invoice__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Ship via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>