force-app/main/default/objects/QB_Invoice__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>