force-app/main/default/objects/QB_Invoice__c/fields/Statement_Memo__c.field-meta.xml
<CustomField>
    <fullName>Statement_Memo__c</fullName>
    <label>Statement Memo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>