force-app/main/default/objects/QB_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
ISBLANK( Internal_Status__c ),
CASE(
Type__c,

&apos;Sales Receipt&apos;, &apos;Paid&apos;,
&apos;Refund Receipt&apos;, &apos;Paid&apos;,

&apos;Invoice&apos;, IF( Amount_Overdue__c &gt; 0,
&apos;Overdue&apos;,
IF( Amount_Due__c &gt; 0,
IF( Amount_Received__c &gt; 0,
&apos;Partial&apos;,
&apos;Open&apos;
),
&apos;Paid&apos;
)
),

IF( Credit_Memo_Unallocated_Credit__c &gt; 0,
&apos;Unapplied&apos;,
&apos;Closed&apos;
)
),
Internal_Status__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>