force-app/main/default/objects/QB_Invoice__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <formula>IF(OR( Type__c==&apos;Credit Memo&apos;,Type__c==&apos;Refund Receipt&apos;),Credit_Memo_Total_Amount__c-Total_Tax__c-Shipping_Charges__c,Total__c + Discount_Amount__c - Total_Tax__c - Shipping_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>