force-app/main/default/objects/QB_Invoice__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF(Terms__c  =&apos;1&apos;,&apos;Due on Inception&apos;,
			IF(Terms__c  =&apos;2&apos;,&apos;Net 15&apos;,
				IF(Terms__c  =&apos;3&apos;,&apos;Net 30&apos;,
				IF(Terms__c  =&apos;4&apos;,&apos;Net 60&apos;,
				IF(Terms__c  =&apos;5&apos;,&apos;Net 10&apos;,
					IF(Terms__c  =&apos;none&apos;,&apos;None&apos;,&apos;None&apos;		
							))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>