force-app/main/default/objects/QB_Invoice__c/fields/Terms_Ref__c.field-meta.xml
<CustomField>
    <fullName>Terms_Ref__c</fullName>
    <label>Terms Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>