force-app/main/default/objects/QB_Invoice__c/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <formula>Amount_Received__c *(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>