force-app/main/default/objects/QB_Invoice__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>