force-app/main/default/objects/QB_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Amount_Due__c</columns>
    <columns>Amount_Overdue__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>